Creado frontend de paginas de perfil gato y usuario

--- a/frontend/src/core/components/MainMenu/MainMenu.css
+++ b/frontend/src/core/components/MainMenu/MainMenu.css
@@ -5,7 +5,7 @@
     align-items: center;
 }
 
-.mainMenuContainer div{
+.sectionContainer{
     width: 14rem;
     height: 16rem;
     background-color: var(--greyopacity);
@@ -15,12 +15,14 @@
     font-size: 2rem;
     font-family: var(--stemLight);
     padding: 1.2rem;
-}
-
-.sectionContainer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    cursor: pointer;
+}
+
+.sectionContainer:hover {
+    background-color: var(--grey);
 }
 
 .sectionContainer img {
