--- a/frontend/src/core/components/NavBar/NavBar.css
+++ b/frontend/src/core/components/NavBar/NavBar.css
@@ -1,18 +1,27 @@
 .navbar {
-    width: 85%;
-    height: 6rem;
-    border-radius: 4.5rem;
-    background-color: var(--grey);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 3.5rem;
-    margin-top: 2.5rem;
+  width: 85%;
+  height: 6rem;
+  border-radius: 4.5rem;
+  background-color: var(--grey);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 3.5rem;
+  margin-top: 2rem;
 }
 
-.navbar img {
-    height: 3.5rem;
-    width: auto;
-    margin: 0 2.8rem;
-    cursor: pointer;
+.navbarButton {
+  background: none;
+  height: 3.5rem;
+  width: auto;
+  margin: 0 2.8rem;
+  cursor: pointer;
 }
+
+.navbarButton:hover svg rect {
+  stroke: var(--green);
+}
+
+.navbarButton:hover svg path {
+    stroke: var(--green);
+  }
