--- a/frontend/src/core/components/InfoUser/InfoUser.css
+++ b/frontend/src/core/components/InfoUser/InfoUser.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  margin-top: auto;
 }
 
 .infoUserContainer div {
