--- a/frontend/src/core/pages/ProfileUser/ProfileUser.css
+++ b/frontend/src/core/pages/ProfileUser/ProfileUser.css
@@ -2,10 +2,7 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
 }
 
-.profileUserContainer > .header {
-    justify-content: flex-start;
-}
