Modificado user cat con valores

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,6 +37,7 @@ html {
     --greendark: #B1D07B;
     --grey: #444444;
     --greyopacity: rgba(68, 68, 68, 0.5);
+    --greyLight: #cecece;
     --stemLight: Stem-ExtraLight, Helvetica, sans-serif;
     --stemBold: Stem-Bold, Helvetica, sans-serif;
     --stemMedium: Stem-Medium, Helvetica, sans-serif;
