Botones del navbar indindican en que pagina estas de la app

--- a/frontend/src/core/components/InfoUser/InfoUser.css
+++ b/frontend/src/core/components/InfoUser/InfoUser.css
@@ -8,6 +8,7 @@
   justify-content: space-between;
   align-items: center;
   margin-top: auto;
+  margin-bottom: 20px;
 }
 
 .infoUserContainer div {
