--- a/frontend/src/core/components/Layout/Layout.css
+++ b/frontend/src/core/components/Layout/Layout.css
@@ -1,7 +1,5 @@
-.calendarContainer {
-    height: 80vh;
+.contentPage {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
