--- a/frontend/src/core/pages/SectionVeterinary/SectionVeterinary.css
+++ b/frontend/src/core/pages/SectionVeterinary/SectionVeterinary.css
@@ -1,7 +1,7 @@
 .veterinaryContainer {
-    height: 100vh;
+    height: 80vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
