--- a/frontend/src/core/components/VeterinaryComponents/WeightChart/WeightChart.css
+++ b/frontend/src/core/components/VeterinaryComponents/WeightChart/WeightChart.css
@@ -27,3 +27,20 @@
     border-radius: 2rem;
     padding-top: 1rem;
 }
+
+.weightHeader {
+    display: flex;
+    width: 85vw;
+}
+
+.weightChartSection button {
+    height: 4rem;
+    background-color: var(--green);
+    color: var(--grey);
+    border-radius: 0.5rem;
+    font-size: 1.5rem;
+    font-family: var(--stemLight);
+    padding: 0.2rem 0.5rem;
+    margin-left: 1rem;
+    cursor: pointer;
+}
