--- a/frontend/src/core/components/VeterinaryComponents/WeightChart/WeightChart.css
+++ b/frontend/src/core/components/VeterinaryComponents/WeightChart/WeightChart.css
@@ -44,3 +44,30 @@
     margin-left: 1rem;
     cursor: pointer;
 }
+
+.weightModal {
+    width: 70vw;
+    height: 15vh;
+    background-color: var(--grey);
+    color: var(--green);
+    border-radius: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    position: absolute;
+    z-index: 1;
+    font-size: 1rem;
+}
+
+.weightModal input {
+    height: 20%;
+    width: 60%;
+    border-radius: 0.2rem;
+    padding: 0.5rem;
+}
+
+.weightModal button {
+    height: 3rem;
+}
